# publish: cargo release --execute
[package]
authors = ["monax-owo"]
description = "Crate to manage settings by monax-owo"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "configu"
repository = "https://github.com/monax-owo/configu"
rust-version = "1.56"
version = "0.0.5"
documentation = "https://docs.rs/configu"

[dependencies]
anyhow = "^1.0.89"
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.8.19"
