[package]
authors = ["monax-owo"]
description = "Simple config"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "configu"
repository = "https://github.com/monax-owo/configu"
rust-version = "1.56"
version = "0.3.0"
documentation = "https://docs.rs/configu"

[dependencies]
anyhow = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
thiserror = "1.0.65"
toml = "^0.8.19"
